--- a/TechJobs6Persistent/TechJobs6Persistent.csproj
+++ b/TechJobs6Persistent/TechJobs6Persistent.csproj
@@ -15,6 +15,7 @@
     <None Remove="Views\Employer\" />
     <None Remove="Views\Skill\" />
     <None Remove="Views\Job\" />
+    <None Remove="Migrations\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -22,10 +23,11 @@
     <Folder Include="Views\Employer\" />
     <Folder Include="Views\Skill\" />
     <Folder Include="Views\Job\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.15" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.15">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.25" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.25">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
